--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack serve --open --mode development",
-    "build": "webpack --mode production",
+    "start": "npm run pre-compile webpack serve --open --mode development",
+    "build": "npm run pre-compile webpack --mode production",
     "clean": "rimraf ./dist",
-    "clean:build": "npm run clean && npm run build"
+    "clean:build": "npm run clean && npm run build",
+    "pre-compile": "NODE_ENV=development TS_NODE_PROJECT=\"tsconfig-for-webpack-config.json\""
   },
   "keywords": [],
   "author": "",
@@ -20,10 +21,13 @@
     "redux": "^4.0.5"
   },
   "devDependencies": {
+    "@types/node": "^14.14.22",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-redux": "^7.1.16",
     "@types/react-router-dom": "^5.1.7",
+    "@types/webpack": "^4.41.26",
+    "@types/webpack-dev-server": "^3.11.1",
     "css-loader": "^5.0.1",
     "html-loader": "^1.3.2",
     "html-webpack-plugin": "^4.5.1",
@@ -33,6 +37,8 @@
     "rimraf": "^3.0.2",
     "style-loader": "^2.0.0",
     "ts-loader": "^8.0.14",
+    "ts-node": "^9.1.1",
+    "tsconfig-paths": "^3.9.0",
     "typescript": "^4.1.3",
     "webpack": "^5.17.0",
     "webpack-cli": "^4.4.0",
